refactor: category타입 변경으로 인한 로직 수정
#127

--- a/src/main/resources/templates/farmer/farmer-gather-writeform.html
+++ b/src/main/resources/templates/farmer/farmer-gather-writeform.html
@@ -166,9 +166,99 @@
                                                     <div class="col-12">
                                                         <div class="form-group">
                                                             <label>모집 품종*</label>
-                                                            <input th:field="*{item}" type="text"
-                                                                   th:class="${#fields.hasErrors('item')}? 'error'"
-                                                                   placeholder="모집할 품종을 정확하게 기재해주세요">
+                                                            <select class="user-chosen-select"
+                                                                    th:field="*{item}"
+                                                                    th:class="${#fields.hasErrors('item')}? 'error'">
+                                                                <option value="0">카테고리를 선택해주세요</option>
+                                                                <option value="111">쌀</option>
+                                                                <option value="112">찹쌀</option>
+                                                                <option value="141">콩</option>
+                                                                <option value="142">팥</option>
+                                                                <option value="143">녹두</option>
+                                                                <option value="144">메밀</option>
+                                                                <option value="151">고구마</option>
+                                                                <option value="152">감자</option>
+                                                                <option value="211">배추</option>
+                                                                <option value="212">양배추</option>
+                                                                <option value="213">시금치</option>
+                                                                <option value="214">상추</option>
+                                                                <option value="215">얼갈이배추</option>
+                                                                <option value="216">갓</option>
+                                                                <option value="221">수박</option>
+                                                                <option value="222">참외</option>
+                                                                <option value="223">오이</option>
+                                                                <option value="224">호박</option>
+                                                                <option value="225">토마토</option>
+                                                                <option value="226">딸기</option>
+                                                                <option value="231">무</option>
+                                                                <option value="232">당근</option>
+                                                                <option value="233">열무</option>
+                                                                <option value="241">건고추</option>
+                                                                <option value="242">풋고추</option>
+                                                                <option value="243">붉은고추</option>
+                                                                <option value="244">피마늘</option>
+                                                                <option value="245">양파</option>
+                                                                <option value="246">파</option>
+                                                                <option value="247">생강</option>
+                                                                <option value="248">고춧가루</option>
+                                                                <option value="251">가지</option>
+                                                                <option value="252">미나리</option>
+                                                                <option value="253">깻잎</option>
+                                                                <option value="254">부추</option>
+                                                                <option value="255">피망</option>
+                                                                <option value="256">파프리카</option>
+                                                                <option value="257">멜론</option>
+                                                                <option value="258">깐마늘(국산)</option>
+                                                                <option value="259">깐마늘(수입)</option>
+                                                                <option value="312">참깨</option>
+                                                                <option value="313">들깨</option>
+                                                                <option value="314">땅콩</option>
+                                                                <option value="315">느타리버섯</option>
+                                                                <option value="316">팽이버섯</option>
+                                                                <option value="317">새송이버섯</option>
+                                                                <option value="318">호두</option>
+                                                                <option value="319">아몬드</option>
+                                                                <option value="411">사과</option>
+                                                                <option value="412">배</option>
+                                                                <option value="413">복숭아</option>
+                                                                <option value="414">포도</option>
+                                                                <option value="415">감귤</option>
+                                                                <option value="416">단감</option>
+                                                                <option value="418">바나나</option>
+                                                                <option value="419">참다래</option>
+                                                                <option value="420">파인애플</option>
+                                                                <option value="421">오렌지</option>
+                                                                <option value="422">방울토마토</option>
+                                                                <option value="423">자몽</option>
+                                                                <option value="424">레몬</option>
+                                                                <option value="425">체리</option>
+                                                                <option value="426">건포도</option>
+                                                                <option value="427">건블루베리</option>
+                                                                <option value="428">망고</option>
+                                                                <option value="512">쇠고기</option>
+                                                                <option value="514">돼지고기</option>
+                                                                <option value="515">닭고기</option>
+                                                                <option value="516">계란</option>
+                                                                <option value="535">우유</option>
+                                                                <option value="611">고등어</option>
+                                                                <option value="612">꽁치</option>
+                                                                <option value="613">갈치</option>
+                                                                <option value="615">명태</option>
+                                                                <option value="619">물오징어</option>
+                                                                <option value="638">건멸치</option>
+                                                                <option value="639">북어</option>
+                                                                <option value="640">건오징어</option>
+                                                                <option value="641">김</option>
+                                                                <option value="642">건미역</option>
+                                                                <option value="644">굴</option>
+                                                                <option value="649">수입조기</option>
+                                                                <option value="650">새우젓</option>
+                                                                <option value="651">멸치액젓</option>
+                                                                <option value="652">굵은소금</option>
+                                                                <option value="653">전복</option>
+                                                                <option value="654">새우</option>
+
+                                                            </select>
                                                             <div th:each="msg : ${#fields.errors('item')}">
                                                                 <p style="color: red" th:text="${msg}"></p>
                                                             </div>
